# innohack

./: README.md  innohack4  innohack5  pyproject.toml
hack_tool/: __init__.py  config.py  db_connection.py  run.py  sql_add.py  test
hack_tool/bl_models/: comparison_bl.py  employee_bl.py  hr_bl.py
hack_tool/chat/: __init__.py  chat_routes.py
hack_tool/client/: __init__.py
hack_tool/comparison/: __init__.py  comparison_routes.py
hack_tool/dal_models/: chat_dal.py  comparison_dal.py  employee_dal.py  hr_dal.py
hack_tool/employee/: __init__.py  employee_routes.py
hack_tool/hr/: __init__.py  hr_routes.py
hack_tool/llama_api/: proccess.py  proccess_comparison.py  process.py  prompt.py
