[tool.poetry]
name = "innhackaton"
version = "0.1.0"
description = ""
authors = ["Gapenysh <bulathai2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
flask-cors = "^5.0.0"
flask-jwt-extended = "^4.6.0"
pydantic = "^2.9.2"
psycopg2 = "^2.9.10"
pydantic-settings = "^2.6.1"
requests = "^2.32.3"
aiohttp = "^3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
